<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="Home"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="@color/team_color"
                android:fontFamily="sans-serif-medium"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/score_color"
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_a_score"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:text="0"
                android:textSize="40sp"
                android:textColor="@color/foul"
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_a_foul"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="tryPointsTeamA"
                android:text="@string/ml_try_points"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="penaltyPointsTeamA"
                android:text="@string/ml_penalty_point"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="dropGoalPointsTeamA"
                android:text="@string/ml_drop_goal_point"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="conversationPointsTeamA"
                android:text="@string/ml_conversation_points"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/foul"
                android:layout_marginTop="8dp"
                android:onClick="foulPlayTeamA"
                android:text="@string/ml_foul"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="Away"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:textSize="14sp"
                android:textColor="@color/team_color"
                android:fontFamily="sans-serif-medium"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/score_color"
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_b_score"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:text="0"
                android:textSize="40sp"
                android:textColor="@color/foul"
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_b_foul"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="tryPointsTeamB"
                android:text="@string/ml_try_points"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="penaltyPointsTeamB"
                android:text="@string/ml_penalty_point"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="dropGoalPointsTeamB"
                android:text="@string/ml_drop_goal_point"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="conversationPointsTeamB"
                android:text="@string/ml_conversation_points"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/foul"
                android:layout_marginTop="8dp"
                android:onClick="foulPlayTeamB"
                android:text="@string/ml_foul"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ml_reset_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"
        android:onClick="resetScores"/>
</RelativeLayout>